--- a/src/app/i18n/locales/en/header.json
+++ b/src/app/i18n/locales/en/header.json
@@ -1,5 +1,6 @@
 {
   "name": "Mythos Ma",
+  "home": "Home",
   "frontend": "Frontend Challenge",
   "project": "My Project",
   "about": "About Me"
