--- a/src/app/i18n/locales/en/header.json
+++ b/src/app/i18n/locales/en/header.json
@@ -3,5 +3,6 @@
   "home": "Home",
   "frontend": "Frontend Challenge",
   "project": "My Project",
+  "work": "Work Project",
   "about": "About Me"
 }
